--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,8 +6,8 @@ before:
     - go mod download
 builds:
   - main: .
-    id: "issue-creator"
-    binary: issue-creator
+    id: "discocat"
+    binary: discocat
     env:
       - CGO_ENABLED=0
     goos:
@@ -41,4 +41,4 @@ brews:
       owner: rerost
       name: homebrew-tools
     directory: Formula
-    homepage: https://github.com/rerost/issue-creator
+    homepage: https://github.com/rerost/discocat
